# snitch-test

./: .gitignore  Dockerfile  README.md  pyproject.toml
snitch_test/: __init__.py  analyzer.py  canary.py  cli.py  monitor.py  reporter.py  sandbox.py
